Wed Oct 11 22:27:37 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: apply patch from Gary Coady to compile when
	  libxml2 has no xinclude support #319886
	* docs/*: renamed Gnome to GNOME fixes #352159

Wed Oct 11 21:37:27 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* libxslt/Makefile.am: a missing DESTDIR
	* python/Makefile.am: fix reference to build paths in python module
	* libexslt/exsltconfig.h.in libxslt/xsltconfig.h.in: fix the header
	  comments on version values, the 3 are patches from Peter
	  Breitenlohner   and should fix #340995

Wed Oct 11 11:16:34 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* libxslt/security.c: applied cleanup patch from Mikhail Zabaluev
	  which should finish fixing #337486

Wed Oct 11 09:55:06 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* libxslt/security.c: applied fix from Shane Corgatelli to pass
	  the full URL when checking security access for network URLs,
	  should fix bug #359366

Mon Aug 21 10:46:25 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* doc/xslt.html python/tests/pyxsltproc.py xsltproc/xsltproc.c: 
	  applied patch from Daniel Leidert to fix some typo
	* xsltproc.xml xsltproc.1: applied another patch from Daniel Leidert
	  and regenerated

Wed Aug 16 17:39:04 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: --xinclude should also force XInclude
	  processing on the stylesheets themselves, raised by Daniel Leidert

Thu Aug 10 15:54:02 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>

	* libxslt/transform.c libxslt/variables.c
	  libxslt/xsltInternals.h: Fixed restoring the context doc
	  for XPath in xsltForEach(). Eliminated the use of @tmpDoc
	  of the transformation context.

Thu Aug 10 13:40:35 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>

	* libxslt/preproc.c: Added missing QName-validation of some
	  attributes of XSLT-elements. This fixes bug #304921, reported
	  by Frans Englich.
